# tailwind

./: .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
tailwind/: asgi.py  settings.py  urls.py  wsgi.py
windvane/: apps.py  models.py  strava.py  urls.py  views.py
windvane/migrations/: 0001_initial.py
windvane/templates/windvane/: authorize.html  new_user.html
