[project]
name = "tailwind"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.1.7",
    "dotenv>=0.9.9",
    "folium>=0.19.5",
    "polyline>=2.0.2",
    "psycopg[binary]>=3.2.5",
    "requests>=2.32.3",
]

[dependency-groups]
dev = [
    "ipython>=8.34.0",
    "jupyter>=1.1.1",
    "ruff>=0.9.10",
]
